test_page/career/css/style.css
/*
    Slide-1 : welcome slide
    Slide-2 : Cozee is
    Slide-3 : Our Culture
    Slide-4 : Meet our Team
    Slide-5 : Job Openings
 */


/*heading of each slide. Comman format for all*/

.slide-heading {
    margin-top: 7%;
    margin-bottom: 3%;
}


/*------------------------ configuration related to slide 1 ------------------*/

#slide-1 {
    color: white;
    background: url(../../image/team-image.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .3);
    /*min-width: 100vw;*/
    min-height: 100vh;
    text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
}

#slide-1-heading {
    padding-top: 14vh;
}

#slide-1-msg {
    padding: 1%;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .7);
    margin-top: 18vh;
}

#slide-1-button {
    padding-top: 7vh;
    text-shadow: none;
}


/*--------------------------- configuration for slide 2 ---------------------*/

#slide-2 {
    color: #8c95ac;
}

#slide-2-heading {
    color: #6d768c;
}

#slide-2-msg {
    font-size: 114%;
    padding-bottom: 10%;
}


/*--------------------------- configuration for slide 3 ---------------------*/

#slide-3 {
    margin-top: -10%;
    color: white;
    background: url(../../image/team-image3.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    box-shadow: inset 0 0 0 1000px rgba(121, 138, 169, .8);
    min-width: 100%;
    min-height: 100vh;
    /*background-color: #371B52;*/
    text-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
}

#slide-3-heading {
    padding-top: 10%;
    padding-bottom: 1%;
}

.slide-3-culture-card {
    background: none;
    border: none;
}


/*.card {
    margin: 0px;
    padding: 0px;
}*/


/*-------------------------- Style rules related to slide -------------------*/

.center {
    box-shadow: 0px 0px 100px 1px black;
    z-index: 9999;
}

.owl-theme .owl-controls .owl-buttons div {
    color: #FFF;
    display: inline-block;
}

.owl-stage-outer {
    position: relative;
}

.owl-controls {
    position: absolute;
    top: 34%;
}

.fa-chevron-left, .fa-chevron-right {
    font-size: 250%;
}

.owl-nav, .owl-controls {
    font-size: 43%;
    width: 100%;
}

.owl-prev {
    float: left;
    background: rgba(0, 0, 0, 0.0) !important;
}

.owl-prev:hover {
    background: rgba(0, 0, 0, 0.5) !important;
}

.owl-next {
    float: right;
    background: rgba(0, 0, 0, 0.0) !important;
}

.owl-next:hover {
    background: rgba(0, 0, 0, 0.5) !important;
}

.item {
    margin-top: auto;
    margin-bottom: 0px;
    /*height: 500px;*/
    height: 80%;
}

.center > img {
    box-shadow: 0px 0px 300px 50px black;
    /*min-height: 100%;*/
    height: 600px;
}


/*----------------------------------- Slide 4 -------------------------------*/

#slide-4 {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    margin-top: 7%;
    margin-bottom: 7%;
    min-width: 80vw;
    min-height: 80vh;
}

.staff-thumbnail {
    margin-top: 32%;
    margin-bottom: 32%;
}

.staff-thumbnail:first-child {
    margin-top: 0px;
}

.staff-thumbnail:last-child {
    margin-bottom: 0px;
}

.staff-thumbnail > img:hover {
    box-shadow: 0px 0px 5px 1px #424242;
}


/* --------------------*/

.staff-thumbnail-horizontal {
    margin-left: auto;
    margin-right: auto;
}


/*--------------------------- configuration for slide 5----------------------*/

#slide-5 {
    background:#F0F1EE;
    min-height: 100vh;

    padding-top: 1%;
}

.slide-5-job-category {
    color: #DC403B;
    font-weight: bolder;
    padding-bottom: 5%;
}

.job-link, .job-link:hover {
    text-decoration: none;
    color: black;
}

.job-card > h4 {
    font-size: 134%;
    /*font-weight: bolder;*/
}

.job-card:hover {
    border-color: #b6b6b6;
    box-shadow: 0px 2px 1px 1px #EEEEEE;
}

.job-extra {
    background: #f3f3f4;
}

.job-extra:hover {
    border-color: #b6b6b6;
    box-shadow: 0px 2px 1px 1px #EEEEEE;
}

.job-card {
    height: 61vh;
}

